update: Added more info for Task assignment notification